refactor(backend): DDD Port/Adapter 전면 분리 — 6개 도메인 간 16개 Port 쌍 신규 + Shared Kernel 정책 문서화